--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "stranky",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000/",
   "dependencies": {
     "@headlessui/react": "^1.7.9",
     "@heroicons/react": "^2.0.14",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
     "react": "^18.2.0",
